--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.5.0",
     "morgan": "~1.9.1",
-    "twig": "~0.10.3"
+    "twig": "~0.10.3",
+    "uuid-random": "^1.3.0"
   }
 }
